--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,23 +1,24 @@
 Package: tabplot
 Type: Package
 Title: Tableplot, a visualization of large statistical datasets
-Version: 0.9
-Date: 2010-12-24
+Version: 0.9-1
+Date: 2011-01-25
 Author: Martijn Tennekes and Edwin de Jonge
 Maintainer: Martijn Tennekes <mtennekes@gmail.com>
 Description: A tableplot is a visualisation of a (large) statistical
         dataset with a dozen of variables, both both numeric and
         categorical. Each column represents a variable and each row bin
-        is an aggregate of a certain number of records. The values of
-        cells are depicted as horizontal bars. Missing values are taken
-        into account. A GUI has been implemented which is used to
-        easily customize the tableplot. Also supports large ffdf
-        datasets from the ff package.
+        is an aggregate of a certain number of records. Numeric
+        variables are visualized as bar charts, and categorical
+        variables as stacked bar charts. Missing values are taken into
+        account. A GUI has been implemented which is used to easily
+        customize the tableplot. Also supports large ffdf datasets from
+        the ff package.
 License: GPL-3
 LazyLoad: yes
 Depends: grid, RColorBrewer, plyr
 Suggests: ff (>= 2.2-0), gWidgets, gWidgetsRGtk2, classInt
 URL: http://code.google.com/p/tableplot/
-Packaged: 2010-12-27 18:21:59 UTC; Von
+Packaged: 2011-01-25 13:58:25 UTC; mtes
 Repository: CRAN
-Date/Publication: 2011-01-03 12:36:18
+Date/Publication: 2011-01-25 16:56:37
