--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: tabplot
-Type: Package
-Title: Tableplot, a visualization of large statistical datasets
-Version: 0.9-1
-Date: 2011-01-25
-Author: Martijn Tennekes and Edwin de Jonge
 Maintainer: Martijn Tennekes <mtennekes@gmail.com>
+License: GPL-3
+Title: Tableplot, a visualization of large statistical datasets
+Type: Package
+LazyLoad: yes
+Author: Martijn Tennekes and Edwin de Jonge
 Description: A tableplot is a visualisation of a (large) statistical
         dataset with a dozen of variables, both both numeric and
         categorical. Each column represents a variable and each row bin
@@ -14,11 +14,11 @@ Description: A tableplot is a visualisation of a (large) statistical
         account. A GUI has been implemented which is used to easily
         customize the tableplot. Also supports large ffdf datasets from
         the ff package.
-License: GPL-3
-LazyLoad: yes
-Depends: grid, RColorBrewer, plyr
-Suggests: ff (>= 2.2-0), gWidgets, gWidgetsRGtk2, classInt
+Version: 0.10
 URL: http://code.google.com/p/tableplot/
-Packaged: 2011-01-25 13:58:25 UTC; mtes
+Date: 2011-05-30
+Depends: data.table, grid, RColorBrewer
+Suggests: ff (>= 2.2-0), gWidgets, gWidgetsRGtk2, classInt, ggplot2
+Packaged: 2011-07-29 13:25:21 UTC; mtes
 Repository: CRAN
-Date/Publication: 2011-01-25 16:56:37
+Date/Publication: 2011-07-29 14:32:13
