--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,8 +1,15 @@
-export(changeTabplot)
 export(datetime2fac)
 export(num2fac)
-export(plot.tabplot)
-export(summary.tabplot)
-export(tableGUI)
+export(tableChange)
+export(tablePalettes)
 export(tableplot)
-export(tableplot_showPalettes)
+export(tableplot_checkBins)
+export(tableplot_checkCols)
+export(tableplot_checkDecreasing)
+export(tableplot_checkFromTo)
+export(tableplot_checkPals)
+export(tableplot_checkScales)
+export(tableSave)
+S3method(plot,tabplot)
+S3method(print,tabplot)
+S3method(summary,tabplot)
