--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,21 +12,24 @@ Description: A tableplot is a visualisation of a (large) dataset with a
         bar charts, and categorical variables as stacked bar charts.
         Missing values are taken into account. Also supports large ffdf
         datasets from the ff package.
-Version: 0.12
+Version: 1.0
 URL: http://code.google.com/p/tableplot/
-Date: 2012-07-11
-Depends: data.table (>= 1.8.0), grid
-Suggests: ff (>= 2.2-0), classInt, ggplot2
-Collate: 'brokenX.R' 'cellplot.R' 'datetime2fac.R' 'getBinSizes.R'
-        'getFreqTable.R' 'getFreqTable_DT.R' 'num2fac.R' 'onLoad.R'
-        'pkg.R' 'plot_tabplot.r' 'plotCatCol.R' 'plotNumCol.R'
-        'preprocess.data.table.R' 'preprocess.ffdf.R' 'preprocess.R'
-        'print_tabplot.R' 'subset.R' 'summary_tabplot.R'
-        'tableChange.R' 'tablePalettes.R' 'tableplot.R'
-        'tableplot_checkBins.R' 'tableplot_checkDecreasing.R'
+Date: 2012-12-18
+Depends: ffbase (>= 0.6-3), grid
+Suggests: classInt, shiny, testthat, ggplot2
+Collate: 'bin_data.R' 'cellplot.R' 'columnTable.R' 'datetime2fac.R'
+        'getBinSizes.R' 'itableplot.R' 'markLabels.R' 'num2fac.R'
+        'pkg.R' 'plotCatCol.R' 'plotNumCol.R' 'plot_tabplot.r'
+        'tablePrepare.R' 'print_tabplot.R' 'summary_tabplot.R'
+        'tableChange.R' 'tablePalettes.R' 'tableSave.R'
+        'tableViewport.R' 'tableplot.R' 'tableplot_checkBins.R'
+        'tableplot_checkCols.R' 'tableplot_checkDecreasing.R'
         'tableplot_checkFromTo.R' 'tableplot_checkPals.R'
-        'tableplot_checkScales.R' 'tableplot_checkCols.R' 'tableSave.R'
-        'tableViewport.R' 'tabplot_object.R'
-Packaged: 2012-07-12 08:19:01 UTC; von-tijn
+        'tableplot_checkScales.R' 'tabplot_object.R' 'bin_hcc_data.R'
+        'subset_data.R' 'coorCatCol.R' 'coorNumCol.R' 'scaleNumCol.R'
+        'splitTab.R' 'tableplot_checkChangePalType.R'
+        'tableplot_checkLimitsX.R' 'tableplot_checkNcols.R'
+        'tableplot_checkNumPals.R'
+Packaged: 2012-12-18 15:38:09 UTC; Vontijn
 Repository: CRAN
-Date/Publication: 2012-07-12 09:21:39
+Date/Publication: 2012-12-18 21:00:05
