--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,15 +1,14 @@
+export(bin_data)
+export(bin_hcc_data)
 export(datetime2fac)
+export(itableplot)
 export(num2fac)
 export(tableChange)
 export(tablePalettes)
 export(tableplot)
-export(tableplot_checkBins)
-export(tableplot_checkCols)
-export(tableplot_checkDecreasing)
-export(tableplot_checkFromTo)
-export(tableplot_checkPals)
-export(tableplot_checkScales)
+export(tablePrepare)
 export(tableSave)
+import(ffbase)
 S3method(plot,tabplot)
 S3method(print,tabplot)
 S3method(summary,tabplot)
