--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,8 @@
+S3method("-",tabplot)
+S3method(plot,tabplot)
+S3method(plot,tabplot_compare)
+S3method(print,tabplot)
+S3method(summary,tabplot)
 export(bin_data)
 export(bin_hcc_data)
 export(datetime2fac)
@@ -5,10 +10,8 @@ export(itableplot)
 export(num2fac)
 export(tableChange)
 export(tablePalettes)
-export(tableplot)
 export(tablePrepare)
 export(tableSave)
+export(tableplot)
 import(ffbase)
-S3method(plot,tabplot)
-S3method(print,tabplot)
-S3method(summary,tabplot)
+import(grid)
